--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -11,7 +11,6 @@
         android:layout_height="match_parent">
 
         <LinearLayout
-            android:id="@+id/container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
@@ -31,29 +30,24 @@
 
                 <TextView
                     android:id="@+id/email"
-                    android:layout_width="277dp"
+                    android:layout_width="160dp"
                     android:layout_height="60dp"
                     android:layout_weight="1"
                     android:textSize="24sp" />
 
+                <Button
+                    android:id="@+id/logout"
+                    android:layout_width="2dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="logout" />
+
             </LinearLayout>
-
-            <TextView
-                android:id="@+id/articles＿1"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:textSize="24sp" />
-
-            <TextView
-                android:id="@+id/article"
-                android:layout_width="match_parent"
-                android:layout_height="225dp"
-                android:textSize="24sp" />
 
             <EditText
                 android:id="@+id/sendarticle"
                 android:layout_width="match_parent"
-                android:layout_height="222dp"
+                android:layout_height="150dp"
                 android:ems="10"
                 android:hint="發布文章..."
                 android:inputType="textPersonName"
@@ -64,6 +58,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="送出" />
+
+            <LinearLayout
+                android:id="@+id/container"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"></LinearLayout>
 
         </LinearLayout>
     </ScrollView>
